Updated ClimbUp code before Habit Tracker refactor